# ros_docker

./: .gitignore  README.md
humble/: Dockerfile  README.md  config.env  docker-compose.yml
humble/catkin_ws/src/cov_mat/: CMakeLists.txt  package.xml
humble/catkin_ws/src/cov_mat/include/cov_mat/lib/: Detection.hpp  anova.hpp  detectionDrawer.hpp  fileBridge.hpp  hungarian.hpp  truthMatcher.hpp
humble/catkin_ws/src/cov_mat/src/: main.cpp
humble/catkin_ws/src/cov_mat/src/lib/: anova.cpp  detectionDrawer.cpp  fileBridge.cpp  hungarian.cpp  truthMatcher.cpp
humble/catkin_ws/src/cov_mat/src/tmp_dev/: CropFertilizer.json  PlantsFeeding.json
humble/catkin_ws/src/cov_mat/src/tmp_dev/pred_kitti_second/: 000000.txt  000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  000009.txt  000010.txt  000011.txt  000012.txt  000013.txt  000014.txt  000015.txt  000016.txt  000017.txt  000018.txt  000019.txt  000020.txt  000021.txt  000022.txt  000023.txt  000024.txt  000025.txt  000026.txt  000027.txt  000028.txt  000029.txt  000031.txt  000032.txt  000033.txt  000034.txt  000035.txt  000036.txt  000037.txt  000038.txt  000039.txt  000040.txt  (+7282 more)
humble/catkin_ws/src/openmmlab3d/: CMakeLists.txt  package.xml
humble/catkin_ws/src/openmmlab3d/scripts/: server_inference.py
humble/catkin_ws/src/openmmlab3d/srv/: Inference.srv
humble/catkin_ws/src/test_package_py/: package.xml  setup.py
humble/catkin_ws/src/test_package_py/launch/: pubsub_launch.py
humble/catkin_ws/src/test_package_py/test_package_py/: publisher_image.py  publisher_member_function.py  publisher_member_function_fibonacci.py  subscriber_image.py  subscriber_member_function.py  subscriber_member_function_fibonacci.py  test_node_py.py
noetic/: Dockerfile  README.md  config.env  docker-compose.yml
ros_humble/: Dockerfile  docker-compose.yml
ros_noetic/: docker-compose.yml
